# oneshot

./: Cargo.toml  README.md  flake.nix
.github/workflows/: nix-checker.yml
src/: main.rs  state.rs
src/state/: client.rs
