[package]
name = "oneshot"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "A wayland compositor"
edition = "2024"
license = "Apache"
readme = "README.md"
repository = "https://github.com/haruki7049/oneshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
