[package]
name = "oneshot"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "A wayland compositor for pure TTY users"
edition = "2024"
license = "Apache"
readme = "README.md"
repository = "https://github.com/haruki7049/oneshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calloop = "0.14.3"
calloop-wayland-source = "0.4.1"
smithay = "0.7.0"
tracing = "0.1.41"
wayland-server = "0.31.10"
